--- a/backend/Dockerfile_back
+++ b/backend/Dockerfile_back
@@ -7,5 +7,5 @@ RUN  apk update \
 COPY requirements.txt /app/requirements.txt
 RUN pip install --upgrade pip && python -m pip install -r requirements.txt
 COPY . .
-CMD ["python3", "-m", "flask", "run",]
+CMD ["python3", "-m", "flask", "run"]
 
