--- a/backend/Dockerfile_back
+++ b/backend/Dockerfile_back
@@ -8,5 +8,5 @@ COPY requirements.txt /app/requirements.txt
 RUN pip install --upgrade pip && python -m pip install -r requirements.txt
 COPY . .
 COPY root.crt /root/.postgresql/root.crt
-CMD ["python3", "-m", "flask", "run", "-h $(hostname -i)"]
+CMD ["python3 -m flask run -h $(hostname -i)"]
 
