--- a/backend/Dockerfile_back
+++ b/backend/Dockerfile_back
@@ -8,8 +8,8 @@ COPY requirements.txt /app/requirements.txt
 RUN pip install --upgrade pip && python -m pip install -r requirements.txt
 COPY . .
 COPY root.crt /root/.postgresql/root.crt
-ENTRYPOINT ['python']
-CMD ['app.py']
+ENTRYPOINT ["python3"]
+CMD ["app.py"]
 
 #CMD ["python3 -m flask run -h $(hostname -i)"]
 
