--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -30,3 +30,18 @@ spec:
   selector:
     app: currencies-app-backend
   type: LoadBalancer
+
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: sonarqube
+spec:
+  ports:
+  - port: 9000
+    name: sonarqube
+    targetPort: 9000
+  selector:
+    app: sonarqube
+  type: LoadBalancer
